src/App.css
@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");

body {
  background: #0c0c0c;
  font-family: "Urbanist", sans-serif;
  color: white;
}

@font-face {
  font-family: "microsoft";
  src: url("./assets/fonts/chinese.msyh.ttf");
}

.ff_microsoft {
  font-family: "microsoft";
}

.custom_container {
  width: 100%;
  max-width: 1200px !important;
  margin: 0 auto;
  padding: 0 20px;
}

.hero_bg_img {
  background-image: url("./assets/images/png/hero-bg.png");
  background-position: right center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  mix-blend-mode: color-dodge;
}

::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

::-webkit-scrollbar-track {
  background: #212121;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background: #09c9ef;
  border-radius: 10px;
}
::-webkit-scrollbar-thumb:hover {
  background: #07a9cc;
}
.group:hover path {
  stroke: url(#gradientStroke);
}
/*  WORD SLIDER */

@keyframes slideUp {
  0% {
    opacity: 0;
    transform: translateY(10px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.animate-slideUp {
  animation: slideUp 0.5s ease-in-out;
}

/* GRID */

.box {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 18px;
  font-weight: 300;
  color: white;
}

@media (max-width: 640px) {
  .grid-container {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 20px;
    width: 90%;
    margin: 0 auto;
    margin-top: 20px;
  }
}

@media (min-width: 640px) {
  .grid-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    width: 100%;
  }
}

@media (min-width: 768px) {
  .grid-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    width: 100%;
  }
}

@media (min-width: 1024px) {
  .grid-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(7, 100px);
    gap: 20px;
    width: 100%;
  }
  .box1 {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
  }
  .box2 {
    grid-column: 2 / 3;
    grid-row: 2 / 4;
  }
  .box3 {
    grid-column: 3 / 4;
    grid-row: 4 / 6;
  }
  .box4 {
    grid-column: 2 / 3;
    grid-row: 5 / 7;
  }
  .box5 {
    grid-column: 1 / 2;
    grid-row: 4 / 6;
  }
}

@media (min-width: 1280px) {
  .grid-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(7, 100px);
    gap: 20px;
    width: 100%;
  }
  .box1 {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
  }
  .box2 {
    grid-column: 2 / 3;
    grid-row: 2 / 4;
  }
  .box3 {
    grid-column: 3 / 4;
    grid-row: 4 / 6;
  }
  .box4 {
    grid-column: 2 / 3;
    grid-row: 5 / 7;
  }
  .box5 {
    grid-column: 1 / 2;
    grid-row: 4 / 6;
  }
}

